Controller Service Repository added